[build-system]
requires = ["setuptools=>59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysuprema"
version = "0.0.1"
authors = [
    { name="Ethan Rucar", email="ethan.rucar@gmail.com"},
    { name="Ethan Rucar", email="ikigami0513@gmail.com"}
]
description = "package to use the Suprema API more easily"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independant"
]

[project.urls]
Homepage = "https://github.com/ikigami0513/pysuprema"
Issues = "https://github.com/ikigami0513/pysuprema/issues"