[metadata]
name = pysuprema
version = 0.1
description = Package to use Suprema API more easily.
long_description = file: README.rst
url = https://github.
author = Ethan Rucar
author_email = ethan.rucar@gmail.com
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operation System :: OS Independant

[options]
include_package_data = true
packages =  find:
python_requires = >=3.6
